--- a/css/style.css
+++ b/css/style.css
@@ -351,11 +351,10 @@ input:-webkit-autofill { -webkit-text-fill-color: inherit !important; -webkit-bo
 \* ------------------------------------------------------------ */
 
 .intro { position: relative; padding: 40px 0 75px; background: url(images/intro-bg.jpg) 50% 50% no-repeat; background-size: cover; color: #fff; text-align: center; }
-.intro:before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%;  background: url(images/pattern.png) 0 0 repeat; background-size: 9px 9px; }
-.intro .intro-image { padding-bottom: 71px;  }
+.intro:before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url(images/pattern.png) 0 0 repeat; background-size: 9px 9px; opacity: .63; }
+.intro .intro-image { padding-bottom: 71px; }
 
-.intro .logo { display: inline-block; margin-bottom: 58px;  }
-
+.intro .logo { display: inline-block; margin-bottom: 58px; }
 
 @media (max-width: 767px) {
 	.intro { padding: 60px 0 30px; }
